# training

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  app.py  app_streamlit.py  pyproject.toml  requirements.txt  run_app.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
notebooks/: test.ipynb
scripts/: monitor_logs.py
src/: __init__.py  app.py  config.py  data_loader.py  database.py  logger.py  main.py  monitoring.py  ui_components.py
src/data/: generator.py
src/utils/: calculations.py
tests/: __init__.py  conftest.py  test_app.py  test_calculations.py  test_config.py  test_data_loader.py  test_database.py  test_generator.py  test_main.py  test_ui_components.py
