# ========================================
# Project Metadata
# ========================================
[project]
name = "bank-operations-analyzer"  # Project name
version = "0.2.0"  # Current version following semantic versioning
description = "Modular Streamlit app for bank operations analysis with AG Grid"  # Short project description
readme = "README.md"  # Path to README file
requires-python = ">=3.11"  # Minimum Python version required
# Core dependencies for the application
dependencies = [
    "streamlit>=1.30.0",    # Web framework for creating data apps
    "pandas>=2.2.0",        # Data manipulation and analysis
    "plotly>=5.18.0",       # Interactive visualization library
    "streamlit-aggrid>=0.3.4",  # AG Grid component for Streamlit
    "loguru>=0.7.0",        # Modern logging library
]

# Optional dependencies for development environment
[project.optional-dependencies]
dev = [
    "ruff>=0.1.15",        # Fast Python linter and formatter
    "pre-commit>=3.6.0",   # Git hooks manager for code quality
    "ipython>=8.20.0",     # Enhanced Python interactive shell
]

# ========================================
# Build Configuration
# ========================================
[build-system]
requires = ["hatchling"]  # Build backend requirement
build-backend = "hatchling.build"  # Specifies Hatchling as the build backend

# Configure which packages to include in the wheel distribution
[tool.hatch.build.targets.wheel]
packages = ["src"]  # Include the src directory in the package

# ========================================
# Ruff Linter Configuration
# ========================================
[tool.ruff]
line-length = 100  # Maximum line length for code formatting
target-version = "py311"  # Target Python version for linting rules

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PTH", # flake8-use-pathlib
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
