# ========================================
# Project Metadata
# ========================================
[project]
name = "bank-operations-analyzer"  # Project name
version = "0.2.0"  # Current version following semantic versioning
description = "Modular Streamlit app for bank operations analysis with AG Grid"  # Short project description
readme = "README.md"  # Path to README file
requires-python = ">=3.11"  # Minimum Python version required
# Core dependencies for the application
dependencies = [
    "streamlit>=1.30.0",    # Web framework for creating data apps
    "pandas>=2.2.0",        # Data manipulation and analysis
    "plotly>=5.18.0",       # Interactive visualization library
    "streamlit-aggrid>=0.3.4",  # AG Grid component for Streamlit
    "loguru>=0.7.0",        # Modern logging library
]

# Optional dependencies for development environment
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",       # Testing framework
    "pytest-cov>=4.1.0",   # Code coverage plugin for pytest
    "ruff>=0.1.15",        # Fast Python linter and formatter
    "mypy>=1.8.0",         # Static type checker
    "pre-commit>=3.6.0",   # Git hooks manager for code quality
    "ipython>=8.20.0",     # Enhanced Python interactive shell
]

# ========================================
# Build Configuration
# ========================================
[build-system]
requires = ["hatchling"]  # Build backend requirement
build-backend = "hatchling.build"  # Specifies Hatchling as the build backend

# Configure which packages to include in the wheel distribution
[tool.hatch.build.targets.wheel]
packages = ["src"]  # Include the src directory in the package

# ========================================
# Ruff Linter Configuration
# ========================================
[tool.ruff]
line-length = 100  # Maximum line length for code formatting
target-version = "py311"  # Target Python version for linting rules

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PTH", # flake8-use-pathlib
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# ========================================
# Pytest Configuration
# ========================================
[tool.pytest.ini_options]
testpaths = ["tests"]  # Directory containing test files
python_files = ["test_*.py"]  # Pattern for test file names
python_classes = ["Test*"]  # Pattern for test class names
python_functions = ["test_*"]  # Pattern for test function names
addopts = "-v --strict-markers --tb=short --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ========================================
# Coverage Configuration
# ========================================
[tool.coverage.run]
source = ["src"]  # Measure coverage for source code in src directory
omit = ["tests/*", "**/__init__.py"]  # Exclude test files and __init__.py from coverage

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ========================================
# MyPy Configuration
# ========================================
[tool.mypy]
python_version = "3.11"          # Target Python version
warn_return_any = true           # Warn about functions that return Any
warn_unused_configs = true       # Warn about unused mypy configurations
disallow_untyped_defs = false    # Allow untyped function definitions for now
check_untyped_defs = true        # Check the body of untyped functions
strict_optional = true           # Enable strict optional type checking
show_error_codes = true          # Show error codes in error messages

# Per-module configuration
[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "loguru.*",
    "st_aggrid.*",
    "psutil.*",
]
ignore_missing_imports = true    # Ignore missing type stubs for these modules
